--- a/Projekt3/Gyuri3.html
+++ b/Projekt3/Gyuri3.html
@@ -1,40 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="Gyuri.css">
+  <title>Document</title>
 </head>
+
 <body>
-    <div id="cont" class="container">
-        <p class="text-center">Bandák</p>
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-            <div class="container">
-              <a class="navbar-brand" href="index.html"><img src="Kepek/rokcandroll.jfif" alt="Kézilabda" style="width:40px;" class="rounded-pill"> </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" href="Mark.html">Metallica</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Levi.html">KISS</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Gyuri.html">AC/DC</a>
-                  </li>           
-                </ul>
-              </div>
-            </div>          
-          </nav>
+  <div id="cont" class="container">
+    <h1 class="text-center">AC/DC</h1>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+      <div class="container">
+        <a class="navbar-brand" href="index.html"><img src="Kepek/rokcandroll.jfif" alt="Kézilabda" style="width:40px;"
+            class="rounded-pill"> </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="Mark.html">Metallica</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Levi.html">KISS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Gyuri.html">AC/DC</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="row">
+      <div class="col-8">
+        <h2>Angus Young</h2>
+        <p>Angus McKinnon Young (Glasgow, Skócia, 1955. március 31. –) skót származású ausztrál gitáros, zeneszerző. Az AC/DC nevű ausztrál rockegyüttes alapító tagja, gitárosa és zeneszerzője.
 
-
+          Bár skót származású, Ausztráliában élte le gyerekkorát és itt alapította testvérével, Malcolmmal az AC/DC-t, 1973-ban.
+          
+          Bluesos stílusával nagyon sok gitárosra volt hatással. A Rolling Stone magazinban 2003-ban David Fricke által összeállított 100 legnagyobb gitáros listáján a 96. helyre rangsorolták,[1] míg a 2011-ben kiadott Minden idők 100 legnagyobb gitárosa elnevezésű listán a 24. helyet kapta.[2]</p>
+      </div>
+      <div class="col-4">
+        <br>
+        <img src="Kepek/250px-AngusYoung.jpg" alt="">
+      </div>
     </div>
+    <br>
+    <div class="row">
+      <div class="col-8">
+        <h2>Brian Johnson</h2>
+        <p>Brian Johnson (Anglia, Dunston, Gateshead, 1947. október 5.) brit énekes és dalszövegíró, az AC/DC együttes énekeseként vált világhírűvé az 1980-as években. Korábban a brit Geordie frontembere volt. Halláskárosodása miatt az aktív koncertezést kénytelen volt feladni 2016-ban, és a Rock or Bust világturnén Axl Rose helyettesítette.[1] 2020-ban a Power Up c. lemezen már újra hallható</p>
+      </div>
+      <div class="col-4">
+        <img src="Kepek/250px-Brian_Johnson.jpg" alt="">
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-8">
+        <h2>Phil Rudd</h2>
+        <p>Phil Rudd, teljes nevén Phillip Hugh Norman Witschke Rudzevecuis (Melbourne, 1954. május 19.) ausztrál dobos. Az AC/DC tagja 1973-1983 között, majd 1994-től. Mark Evans basszusgitáros távozása után ő maradt az egyetlen ausztrál tag.
+
+          Rudd Sonor dobokat és Paiste cintányérokat használ. Egyszerű "2/4-es" ütemekből álló stílusa a zenekar hangzásának egyik fontos védjegye. Mindazonáltal a rock egyik legmeghatározóbb dobosa.</p>
+      </div>
+      <div class="col-4">
+        <img src="Kepek/250px-Ac-dcphil-rudd.jpg" alt="">
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-8">
+        <h2>Stevie Young</h2>
+        <p>Stevie Young (sz. Stephen Crawford Young) egy ausztráliai gitáros, aki Skóciában született 1956. november 12-én.
+
+          Nagybátyjai, Angus Young és Malcolm Young az AC/DC alapító tagjai. Apja Stephen Young. Az 1988-as turnén, az USA-beli Blow Up Your Video albumon, Malcolm Youngot helyettesítette, aki akkor épp alkoholelvonó kúrán volt. Mivel akkoriban nagyon hasonlított Malcolmra, és játékstílusuk is szinte megegyezik, sok rajongó észre sem vette, hogy nem Malcolm van a színpadon. 2014-ben Malcolm végleg visszavonult egészségügyi okok (demencia) miatt, ezért Stevie helyettesíti.</p>
+      </div>
+      <div class="col-4">
+        <img src="Kepek/Stevie_Young_with_ACDC_Tacoma_WA_Feb_2_2016.jpg" alt="">
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-8">
+        <h2>Cliff Williams</h2>
+        <p>Cliff Williams sz. Clifford Williams (1949. december 14. –) angol basszusgitáros, vokalista, az AC/DC tagja 1977-től 2016-ig, majd 2020-tól.
+          1949. december 14-én látta meg a napvilágot az angliai Romfordban, Essex megyében, Clifford Williams néven. A család 1961-ben a Liverpool melletti Hoylake-be költözött a könnyebb megélhetés reményében. Cliff itt ismerkedett meg a Merseybeat zenekarral, mely a beat stílusnak volt az előfutára. E zenei irányzat mély benyomást tett az akkor 12 éves fiúra, így elhatározta, hogy ha felnő zenész lesz. Cliff 13 évesen alapította meg első zenekarát, stílusukat a Rolling Stones, a The Kings és Bo Diddley határozta meg. Basszusgitározni jóformán egyedül tanult meg kedvenc zenekarainak szerzeményei meghallgatása után, bár vett néhány órát egy liverpooli basszusgitárostól. 16 évesen felhagyott tanulmányaival és esténként zenészként kereste a kenyérre valót.
+          2016. július elején bejelentette, hogy a Rock or Bust turné után visszavonul. Ez azt jelentette, hogy a dalszerző és gitáros Malcolm Young, a dobos Phil Rudd és az énekes, Brian Johnson után immáron a negyedik alapemberét veszítette el az ausztrál rockbanda. Utolsó koncertje a zenekarral 2016 szeptember 20.-án volt Philadelphiaban. Előtte júniusban egy interjúban megerősítette elhatározását:
+
+
+        </p>
+      </div>
+      <div class="col-4">
+        <img id="cliff" src="Kepek/CliffWilliams.JPG" alt="">
+      </div>
+    </div>
+    <br>
+
+
+  </div>
 </body>
+
 </html>
